@@ -1,3 +1,4 @@
+// Alias: ca
 // From: http://snowball.tartarus.org/algorithms/catalan/stemmer.html
 // Author: Israel Olalla
 // Licence: 2-clause BSD, as per http://snowball.tartarus.org/license.php
