@@ -1,3 +1,4 @@
+// Alias: fi
 
 /* Finnish stemmer.
 
