@@ -1,3 +1,5 @@
+// Alias: fr
+
 routines (
            prelude postlude mark_regions
            RV R1 R2
