@@ -1,3 +1,5 @@
+// Alias: ru
+
 stringescapes {}
 
 /* the 32 Cyrillic letters in Unicode */
